--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,19 @@
 
 
     <ImageView
+        android:id="@+id/imageViewThoughts"
+        android:layout_width="393dp"
+        android:layout_height="319dp"
+        android:layout_marginBottom="8dp"
+        android:elevation="2dp"
+        android:src="@drawable/thoughts2"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/imageViewCharacter"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.755"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
         android:id="@+id/buttonReset"
         android:layout_width="70dp"
         android:layout_height="70dp"
@@ -39,30 +52,32 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/money" />
 
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_marginTop="24dp"
+        android:elevation="3dp"
         android:text="@string/saving"
-        android:textSize="25sp"
+        android:textSize="25dp"
         android:visibility="invisible"
-        app:layout_constraintEnd_toStartOf="@+id/buttonSettings"
-        app:layout_constraintStart_toEndOf="@+id/buttonReset"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.541"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageViewThoughts" />
 
     <TextView
         android:id="@+id/item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:elevation="3dp"
         android:text="item"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/money"
-        app:layout_constraintEnd_toStartOf="@+id/buttonSettings"
-        app:layout_constraintStart_toEndOf="@+id/buttonReset"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.007" />
+        android:textSize="30dp"
+        app:layout_constraintEnd_toEndOf="@+id/imageViewThoughts"
+        app:layout_constraintStart_toStartOf="@+id/imageViewThoughts"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
         android:id="@+id/money"
@@ -81,8 +96,8 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="228dp"
-        android:layout_height="364dp"
+        android:layout_width="257dp"
+        android:layout_height="383dp"
         android:src="@drawable/moneyjar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -92,7 +107,7 @@
         app:layout_constraintVertical_bias="0.539" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/imageViewCharacter"
         android:layout_width="216dp"
         android:layout_height="203dp"
         android:layout_marginStart="84dp"
@@ -107,39 +122,43 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="56dp"
+        android:elevation="3dp"
         android:text="@string/cost"
-        android:textSize="25sp"
+        android:textSize="25dp"
         android:visibility="invisible"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonReset" />
+        app:layout_constraintBottom_toTopOf="@+id/leftTextView"
+        app:layout_constraintStart_toStartOf="@+id/imageViewThoughts"
+        app:layout_constraintTop_toBottomOf="@+id/item"
+        app:layout_constraintVertical_bias="0.40" />
 
     <TextView
         android:id="@+id/costEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="12dp"
+        android:elevation="3dp"
         android:inputType="numberDecimal"
         android:text="costEditText"
-        android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.011"
+        android:textSize="30dp"
+        app:layout_constraintEnd_toEndOf="@+id/imageViewThoughts"
+        app:layout_constraintHorizontal_bias="0.157"
         app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/item" />
 
     <TextView
         android:id="@+id/leftTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="12dp"
+        android:elevation="3dp"
         android:text="Left"
-        android:textSize="30sp"
+        android:textSize="30dp"
         android:visibility="invisible"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintEnd_toEndOf="@+id/imageViewThoughts"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="@+id/imageViewThoughts"
+        app:layout_constraintTop_toBottomOf="@+id/costEditText" />
 
     <TextView
         android:id="@+id/HintToAddNewGoalTextView"
@@ -148,13 +167,27 @@
         android:text="@string/textHintToAddNewGoalTextView"
         android:textAlignment="center"
         android:textColor="@color/textColorHintToAddNewGoalTextView"
-        android:textSize="20sp"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/imageView"
         app:layout_constraintVertical_bias="0.301" />
+
+    <TextView
+        android:id="@+id/mainActivityHintTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/mainActivityHint"
+        android:textAlignment="center"
+        android:textSize="17dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.489"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.842" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
