--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,12 +12,12 @@
         android:id="@+id/imageViewThoughts"
         android:layout_width="393dp"
         android:layout_height="319dp"
-        android:layout_marginBottom="4dp"
         android:elevation="2dp"
         android:src="@drawable/thoughts2"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/imageViewCharacter"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.555"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
@@ -47,6 +47,7 @@
         android:layout_marginTop="48dp"
         android:src="@drawable/outline_currency_exchange_24"
         android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/adView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -88,6 +89,7 @@
         android:textSize="30sp"
         android:textColor="@color/textColorHintToAddNewGoalTextView"
         android:visibility="invisible"
+        android:elevation="2dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintHorizontal_bias="0.504"
@@ -102,20 +104,19 @@
         android:src="@drawable/moneyjar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.577" />
+        app:layout_constraintVertical_bias="0.454" />
 
     <ImageView
         android:id="@+id/imageViewCharacter"
         android:layout_width="216dp"
         android:layout_height="203dp"
         android:layout_marginStart="84dp"
-        android:layout_marginTop="160dp"
+        android:layout_marginTop="192dp"
         android:src="@drawable/griff"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.2"
+        app:layout_constraintHorizontal_bias="0.205"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/imageView" />
 
@@ -197,13 +198,11 @@
         android:id="@+id/adView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        app:adSize="BANNER"
+        app:adSize="SMART_BANNER"
         app:adUnitId="ca-app-pub-3940256099942544/6300978111"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"></com.google.android.gms.ads.AdView>
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 
