--- a/app/src/main/res/layout/goals_list_activity.xml
+++ b/app/src/main/res/layout/goals_list_activity.xml
@@ -30,7 +30,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
-                android:backgroundTint="@color/tt_transparent"
+                android:backgroundTint="@android:color/transparent"
                 android:elevation="2dp"
                 android:padding="0dp"
                 android:text="Money"
@@ -101,7 +101,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
-                android:backgroundTint="@color/tt_transparent"
+                android:backgroundTint="@android:color/transparent"
                 android:elevation="2dp"
                 android:padding="0dp"
                 android:text="Money"
@@ -169,7 +169,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
                 android:padding="0dp"
-                android:backgroundTint="@color/tt_transparent"
+                android:backgroundTint="@android:color/transparent"
                 android:elevation="2dp"
                 android:text="Money"
                 android:textSize="12sp" />
