--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_height="319dp"
         android:elevation="4dp"
         style="@style/ThoughtsImageViewSrc"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/imageViewCharacter"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.755"
@@ -79,7 +79,7 @@
         android:elevation="4dp"
         android:text="@string/saving"
         android:textSize="25dp"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@+id/imageViewThoughts"
         app:layout_constraintHorizontal_bias="0.467"
         app:layout_constraintStart_toStartOf="@+id/imageViewThoughts"
@@ -107,7 +107,7 @@
         android:textAlignment="center"
         android:textColor="#a5804a"
         android:textSize="30sp"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintHorizontal_bias="0.504"
@@ -274,6 +274,7 @@
         android:layout_marginTop="4dp"
         android:elevation="4dp"
         android:inputType="numberDecimal"
+        android:visibility="invisible"
         android:text="costEditText"
         android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="@+id/imageViewThoughts"
