--- a/app/src/main/res/layout/addnewgoal.xml
+++ b/app/src/main/res/layout/addnewgoal.xml
@@ -5,14 +5,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AddNewGoalActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingLeft="24dp"
+    android:paddingRight="24dp">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="16dp"
+        android:textSize="24dp"
+        android:text="@string/activityTitleNewGoal"/>
 
     <EditText
         android:id="@+id/edittextItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:hint="@string/itemHint"
         android:maxLength="15"
         android:textColorHint="#616161"
@@ -22,7 +30,8 @@
         android:id="@+id/edittextCost"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="24dp"
         android:inputType="numberDecimal"
         android:maxLength="7"
         android:hint="@string/targetHint"
@@ -32,15 +41,17 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginBottom="24dp">
 
         <Button
             android:id="@+id/buttonCancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_marginRight="2dp"
+            android:layout_marginEnd="4dp"
             android:text="@string/cancel"
+            android:background="@color/tt_transparent"
             style="@style/ButtonsColor"/>
 
         <Button
@@ -48,7 +59,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_marginLeft="2dp"
+            android:layout_marginStart="4dp"
             android:text="Ok"
             style="@style/ButtonsColor"/>
 
