--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,6 +7,7 @@
         <item name="colorSecondary">#c8a00b</item>
         <item name="colorOnSecondary">@color/black</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="bottomSheetDialogTheme">@style/CustomBottomSheetDialog</item>
     </style>
     <style name="OtherActivities" parent="@style/Theme.AppCompat.Dialog">
         <item name="android:textColor">@color/black</item>
@@ -20,5 +21,8 @@
         <item name="android:textColor">@color/black</item>
         <item name="buttonTint">@color/black</item>
     </style>
+<!--    <style name="BottomSheetStyle" parent="Theme.Design.BottomSheetDialog">-->
+<!--        <item name="android:background">@drawable/bottom_sheet_drawable</item>-->
+<!--    </style>-->
 
 </resources>
